k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-service
spec:
  type: LoadBalancer
  selector:
    app: retailpulse
  ports:
  - name: streamlit
    port: 8501
    targetPort: 8501
  - name: fastapi
    port: 8000
    targetPort: 8000
