k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailpulse-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: retailpulse.zidio.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retailpulse-service
            port:
              number: 8501
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: retailpulse-service
            port:
              number: 8000
